fixed css issue with gap between grid

--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -77,7 +77,7 @@ img {
     margin-top: 500px;
 }
 
-.detail__songs {
+.detail__dogs {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -96,21 +96,3 @@ img {
     cursor: pointer;
 }
 
-.detail__dogs {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.dog {
-    width: 100%;
-    padding: 10px;
-    display: grid;
-    grid-template-columns: 0.1fr 3fr 1fr;
-    border-radius: 5px;
-}
-
-.dog:hover {
-    background-color: hsla(0, 0%, 100%, 0.1);
-    cursor: pointer;
-}
